--- a/app/src/main/res/layout/itemlayoutremotejobs.xml
+++ b/app/src/main/res/layout/itemlayoutremotejobs.xml
@@ -1,25 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="15dp"
+        android:padding="5dp"
         >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:padding="5dp"
+            >
+
 
         <ImageView
             android:id="@+id/iv_logo"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="60dp"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
             android:src="@drawable/ic_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_date"
             app:layout_constraintBottom_toTopOf="@+id/tv_category"
+            />
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:visibility="gone"
+            android:src="@drawable/ic_delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
             />
 
         <ImageView
@@ -81,31 +107,31 @@
             android:drawablePadding="2dp"
             android:drawableStart="@drawable/ic_location"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginStart="10dp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_jobtype"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="5dp"
             />
 
         <TextView
             android:id="@+id/tv_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="15dp"
             android:padding="2dp"
             android:layout_marginBottom="5dp"
             android:text="kkkjkjkkjkjk"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_date"
             app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
