--- a/app/src/main/res/layout/saved_jobfragment.xml
+++ b/app/src/main/res/layout/saved_jobfragment.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
-    android:layout_gravity="center"
     tools:context=".fragment.SavedJobFragment">
 
 <androidx.cardview.widget.CardView
+    android:id="@+id/crd_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -18,6 +18,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:cardCornerRadius="15dp"
     android:elevation="8dp"
+    android:visibility="gone"
     android:backgroundTint="@color/background"
     >
     <TextView
@@ -31,12 +32,10 @@
 </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_favJob"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
